[package]
name = "ewt"
version = "0.2.0"
edition = "2024"
license = "GPL-3.0-or-later"

[lib]
crate-type = ["cdylib"]

[dependencies]
icu_segmenter = { version = "2.0.0", optional = true }
libc = "0.2.171"
windows = { version = "0.62.1", features = [
    "Data_Text",
    "Foundation_Collections",
], optional = true }
itertools = { version = "0.14.0", optional = true }
libc_alloc = "1.0.7"

[build-dependencies]
bindgen = "0.72.1"

[profile.release]
codegen-units = 1
lto = true
strip = true
panic = "abort"

[features]
default = ["icu_segmenter"]
# default = ["windows"]
icu_segmenter = ["dep:icu_segmenter", "dep:itertools"]
