[package]
name = "ewt"
version = "0.2.0"
edition = "2024"
license = "GPL-3.0-or-later"

[lib]
crate-type = ["cdylib"]

[dependencies]
icu_segmenter = { version = "2.2.0", optional = true }
libc = "0.2.184"
windows = { version = "0.62.2", features = [
    "Data_Text",
    "Foundation_Collections",
], optional = true }
itertools = { version = "0.14.0", optional = true }
libc_alloc = "1.0.7"
rust_icu_ubrk = { version = "5.6.0", optional = true }

[target.'cfg(target_env = "msvc")'.dependencies]
rust_icu_sys = { version = "5.6.0", optional = true, default-features = false }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
rust_icu_sys = { version = "5.6.0", optional = true, features = ["default"] }

[build-dependencies]
bindgen = "0.72.1"

[profile.release]
codegen-units = 1
lto = true
strip = true
panic = "abort"

[features]
default = ["icu_segmenter"]
# default = ["windows"]
icu_segmenter = ["dep:icu_segmenter", "dep:itertools"]
rust_icu_ubrk = ["dep:rust_icu_ubrk", "dep:rust_icu_sys", "dep:itertools"]

[patch.crates-io]
rust_icu_sys = { git = "https://github.com/Master-Hash/rust_icu.git", rev = "cd95991" }
