[package]
name = "ewt"
version = "0.5.0"
edition = "2024"
license = "GPL-3.0-or-later"

[lib]
crate-type = ["cdylib"]

[dependencies]
icu_segmenter = { version = "2.2.0", optional = true }
libc = "0.2.184"
windows = { version = "0.62.2", features = [
    "Data_Text",
    "Foundation_Collections",
], optional = true }
itertools = { version = "0.14.0", optional = true }
libc_alloc = "1.0.7"
rust_icu_sys = { version = "5.6.0", optional = true }
rust_icu_ubrk = { version = "5.6.0", optional = true }

[build-dependencies]
bindgen = "0.72.1"

[profile.release]
codegen-units = 1
lto = true
strip = true
panic = "abort"

[features]
default = ["icu_segmenter"]
# default = ["windows"]
icu_segmenter = ["dep:icu_segmenter", "dep:itertools"]
rust_icu_ubrk = ["dep:itertools", "dep:rust_icu_sys", "dep:rust_icu_ubrk"]
windows-icu = ["rust_icu_sys/windows-sys", "dep:rust_icu_ubrk", "dep:itertools"]

[patch.crates-io]
rust_icu_sys = { git = "https://github.com/Master-Hash/rust_icu.git", rev = "09194c8" }
rust_icu_ubrk = { git = "https://github.com/Master-Hash/rust_icu.git", rev = "09194c8" }
# rust_icu_sys = { path = "../rust_icu/rust_icu_sys" }
# rust_icu_ubrk = { path = "../rust_icu/rust_icu_ubrk" }

